# 429tmrob

./: .env  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.githooks/: pre-push
.github/: copilot-instructions.md
.github/agents/: reviewer.agent.md  software-engineer.agent.md  template.agent.md
.github/instructions/: frontend-web.instructions.md  python-backend.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: template.prompt.md
.github/skills/affine-read-write/: SKILL.md
.github/skills/affine-secret-name-check/: SKILL.md  sync_secrets.py
.github/skills/template/: SKILL.md
.github/skills/zero-bloat-check/: SKILL.md
ENDPOINTS/: API.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  ruff.toml
frontend/: .dockerignore  API.md  Dockerfile  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: error-boundary.tsx  fatigue-tracker.tsx
frontend/src/components/dashboard/: audit-log-panel.tsx  chmu-panel.tsx  classifier-widget.tsx  director-dashboard.tsx  doctor-dashboard.tsx  ethics-summary.tsx  feedback-panel.tsx  it-admin-dashboard.tsx  licenses-panel.tsx  metrics-cards.tsx  (+8 more)
frontend/src/context/: AuthContext.tsx  HospitalContext.tsx  SettingsContext.tsx  ToastContext.tsx
frontend/src/lib/: api-utils.tsx  api.ts  golden-data.ts  hospital-config.tsx  types.ts
frontend/src/pages/: HospitalDashboard.tsx  KrajPage.tsx  LoginPage.tsx  NotFoundPage.tsx
(+5 files in other folders)
